fix: add ivy-lsp dependency and config compat for upstream serena formats
- Add ivy-lsp>=0.2.0 to dependencies for native Ivy LSP support
- Add ivy pytest marker
- Handle both 'language' (singular) and 'languages' (plural list) config formats
- Skip unsupported languages (markdown, yaml) with warning instead of crashing
- Gracefully skip projects that fail to load in from_config_file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "tqdm>=4.67.1",
   "tiktoken>=0.9.0",
   "anthropic>=0.54.0",
+  "ivy-lsp>=0.2.0",
 ]
 
 [[tool.uv.index]]
@@ -273,6 +274,7 @@ markers = [
   "dart: language server running for Dart",
   "erlang: language server running for Erlang",
   "al: language server running for AL (Microsoft Dynamics 365 Business Central)",
+  "ivy: language server running for Ivy (formal verification)",
 ]
 
 [tool.codespell]
